fix:scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,42 @@
   --max-width: 1200px;
 }
 
+/* Light mode scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 15px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  
+  /* background-color:#d8a884 ; */
+  border-radius: 5px;
+  background-image: linear-gradient( #ffefbd , #d8a884 100%);
+
+}
+
+::-webkit-scrollbar-thumb:hover {
+  /* background-color:#d8a884 ; */
+  background-image: linear-gradient(#ffefbd , #d8a884 );
+}
+
+/* Dark mode scrollbar */
+.dark ::-webkit-scrollbar-thumb {
+  background-image: linear-gradient( #ffefbd, #d8a884 );
+
+  /* background-color:#d8a884 ; */
+  
+}
+
+.dark ::-webkit-scrollbar-thumb:hover {
+  background-image: linear-gradient(#ffefbd, #d8a884);
+
+  /* background-color:#d8a884 ; */
+}
 * {
   padding: 0;
   margin: 0;
